# docu-galaxy-linker

./: README.md  plan.md  projects.txt  pyproject.toml  requirements.txt
docs/: index.md  tutorial.md
docs/explanation/: diataxis-and-this-tool.md
docs/how-to/: interpret-findings.md
docs/reference/: cli.md  findings-glossary.md
docu_galaxy_linker.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
graphs/: _base.json  _head_modified.json  all-projects-cytoscape.json  all-projects.json  landscape-documentation-cytoscape.json  landscape-documentation.json  landscape-map.html  landscape-report.md  ubuntu-security-documentation-cytoscape.json  ubuntu-security-documentation.json  ubuntu-server-documentation-cytoscape.json  ubuntu-server-documentation.json
src/: __init__.py  bundle.py  cli.py  config.py  diff.py  export.py  link_check.py  orchestrator.py  ownership.py  report.py
src/concepts/: builder.py  extractor.py
src/graph/: builder.py  models.py
src/parsers/: markdown_parser.py  patterns.py  rst_parser.py
src/web/: app.py
src/web/static/js/: concept-map.js  visualization.js
src/web/templates/: concept-map.html  graph-view.html
tests/: test_bundle.py  test_diataxis_and_broken_refs.py  test_graph_builder.py  test_landscape_project.py  test_parsers.py  test_report_and_diff.py
tests/fixtures/docs/: index.md  index.rst  tutorial.md
